--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
     </header>
     <main>
       <!-- HERO -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Section 1 -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="feature-wrap list">
@@ -120,9 +120,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 2 -->
-      <section class="section-two">
+      <!-- <section class="section-two">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="section-list list">
@@ -137,9 +137,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 3 -->
-      <section class="team-section section">
+      <!-- <section class="team-section section">
         <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -309,9 +309,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Customers -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -359,10 +359,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="logo-wrap">
           <a class="footer-logo link" href="./index.html"
@@ -427,9 +427,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -508,7 +508,7 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
