--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
     <!-- Header -->
@@ -53,6 +54,16 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="mob-menu-open">
+          <svg
+            class="mob-menu-open-icon"
+            stroke="#2e2f42"
+            width="32"
+            height="22"
+          >
+            <use href="./images/icons.svg#icon-menu-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
