--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link link" href="">Contacts</a>
             </li>
           </ul>
-          <button type="button" class="mob-menu-open">
+          <button type="button" class="mob-menu-open js-open-menu">
             <svg
               class="mob-menu-open-icon"
               stroke="#2e2f42"
@@ -64,6 +64,58 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="mobile-menu is-open js-menu-container">
+        <button class="mob-menu-close-btn js-close-menu">
+          <svg class="mob-menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+        <ul class="mob-menu-list list">
+          <li class="mob-menu-item">Studio</li>
+          <li class="mob-menu-item">Portfolio</li>
+          <li class="mob-menu-item">Contacts</li>
+        </ul>
+        <div class="mob-menu-wrap">
+          <div class="mob-menu-contacts">
+            <a class="mob-menu-phone-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+            <a class="mob-menu-email-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </div>
+          <ul class="mob-menu-social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -520,6 +572,7 @@
         </form>
       </div>
     </div> -->
+    <script src="./js/mobile-menu.js"></script>
     <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
