--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link link" href="">Contacts</a>
             </li>
           </ul>
-          <button type="button" class="mob-menu-open js-open-menu">
+          <button type="button" class="mob-menu-open is-open js-open-menu">
             <svg
               class="mob-menu-open-icon"
               stroke="#2e2f42"
@@ -120,16 +120,16 @@
     </header>
     <main>
       <!-- HERO -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Section 1 -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="feature-wrap list">
@@ -183,7 +183,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 2 -->
       <!-- <section class="section-two">
         <div class="container">
@@ -492,7 +492,7 @@
       </div>
     </footer> -->
     <!-- Modal -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -571,8 +571,8 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
