--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </ul>
         </address>
       </div>
-      <div class="mobile-menu is-open js-menu-container">
+      <div class="mobile-menu js-menu-container">
         <button class="mob-menu-close-btn js-close-menu">
           <svg class="mob-menu-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-modal"></use>
@@ -185,24 +185,39 @@
         </div>
       </section>
       <!-- Section 2 -->
-      <!-- <section class="section-two">
+      <section class="section-two">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="section-list list">
             <li class="section-item">
-              <img src="./images/img-1.jpg" alt="Rectangle 71" width="360" />
+              <img
+                srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
+                src="./images/img-1.jpg"
+                alt="Desctop"
+                width="360"
+              />
             </li>
             <li class="section-item">
-              <img src="./images/img-2.jpg" alt="Rectangle 71" width="360" />
+              <img
+                srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
+                src="./images/img-2.jpg"
+                alt="Phone with codes"
+                width="360"
+              />
             </li>
             <li class="section-item">
-              <img src="./images/img-3.jpg" alt="Rectangle 71" width="360" />
+              <img
+                srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
+                src="./images/img-3.jpg"
+                alt="Laptop and phone"
+                width="360"
+              />
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 3 -->
-      <!-- <section class="team-section section">
+      <section class="team-section section">
         <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -372,7 +387,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Customers -->
       <!-- <section class="section">
         <div class="container">
