--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
           </svg>
         </button>
         <ul class="mob-menu-list list">
-          <li class="mob-menu-item">Studio</li>
-          <li class="mob-menu-item">Portfolio</li>
-          <li class="mob-menu-item">Contacts</li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="mob-menu-item">
+            <a class="mob-menu-link link" href="">Contacts</a>
+          </li>
         </ul>
         <div class="mob-menu-wrap">
           <div class="mob-menu-contacts">
@@ -389,8 +395,8 @@
         </div>
       </section>
       <!-- Customers -->
-      <!-- <section class="section">
-        <div class="container">
+      <section class="section">
+        <div class="container customers-container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-list-item">
@@ -437,7 +443,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Footer -->
     <!-- <footer class="footer">
