--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/media.css" />
+    <link rel="stylesheet" href="./css/media-portfolio.css" />
   </head>
   <body>
     <!-- Header -->
